[gd_scene load_steps=2 format=3 uid="uid://runsummary001"]

[ext_resource type="Script" path="res://scripts/ui/run_summary.gd" id="1_summary"]

[node name="RunSummary" type="CanvasLayer"]
script = ExtResource("1_summary")

[node name="Overlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Title" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "SHIFT COMPLETE!"
horizontal_alignment = 1

[node name="Stats" type="VBoxContainer" parent="Panel/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Score" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0, 1)
theme_override_font_sizes/font_size = 24
text = "FINAL SCORE: $0"
horizontal_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2
alignment = 1

[node name="RestartButton" type="Button" parent="Panel/VBox/Buttons"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "RESTART"

[node name="MenuButton" type="Button" parent="Panel/VBox/Buttons"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "MENU"
